<resources>
    <string name="app_name">Test Application</string>
    <string name="logo">logo</string>
    <string name="title_name">Заголовок</string>
    <string name="description_name">Описание</string>
    <string name="button_name">Перейти</string>
    <string name="title_name_item">Название:</string>
    <string name="short_desc_name">Краткое описание:</string>
    <string name="description_full_name">Полное описание:</string>
    <string name="errorLogo">errorLogo</string>
    <string name="errorText">errorText</string>
</resources>
